data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2209.wast
;; 9. **Test Description:** Test a loop where `br_table` instruction uses backward branches with mismatched input types compared to the loop's type. Identify if `wizard_engine`'s handling of mismatch conditions prevents infinite iterations, unlike WebAssembly’s unique handling.

(assert_invalid
  (module
    (func $backward-branch-type-mismatch (result i32)
      (loop (result i32) 
        (br_table 1 0 (i32.const 1))
      )
      (i32.const 1)
    )
  )
  "type mismatch"
)